Cyclic dependency when b-bones parameters are driven by a child bone #59734

Closed
opened 2018-12-21 19:27:14 +01:00 by lucas veber · 3 comments

System Information
Operating system: Win 10
Graphics card: Gtx 980

Blender Version
Blender 2.8 latest build
Worked: Blender 2.79b

Short description of error
A bone parented to another bone, can't drive the parent bendy bone values (easein, easeout...) without creating a dependency cycle (resulting in one frame lag, plus crashing Blender when many bones are setup this way). Since it is a common scenario when rigging characters, to add tweak controllers on characters, and it used to work fine in Blender 2.79, I would strongly recommend to consider it as a bug instead of a "feature". It would be a pain to rig without that working properly, and would totally break existing rigs from Blender 2.79.

Exact steps for others to reproduce the error

  • Open the attached blend file:
    bendybones_280.blend

  • The left bone is parented to the right bone. It's driving its bendy values.

  • Open the console, a dependency cycle is detected.

  • Here is the file made in Blender 2.79, works fine
    blendybones_279.blend

**System Information** Operating system: Win 10 Graphics card: Gtx 980 **Blender Version** Blender 2.8 latest build Worked: Blender 2.79b **Short description of error** A bone parented to another bone, can't drive the parent bendy bone values (easein, easeout...) without creating a dependency cycle (resulting in one frame lag, plus crashing Blender when many bones are setup this way). Since it is a common scenario when rigging characters, to add tweak controllers on characters, and it used to work fine in Blender 2.79, I would strongly recommend to consider it as a bug instead of a "feature". It would be a pain to rig without that working properly, and would totally break existing rigs from Blender 2.79. **Exact steps for others to reproduce the error** - Open the attached blend file: [bendybones_280.blend](https://archive.blender.org/developer/F6027669/bendybones_280.blend) - The left bone is parented to the right bone. It's driving its bendy values. - Open the console, a dependency cycle is detected. - Here is the file made in Blender 2.79, works fine [blendybones_279.blend](https://archive.blender.org/developer/F6027690/blendybones_279.blend)
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber
Alexander Gavrilov self-assigned this 2018-12-21 20:27:58 +01:00

This issue was referenced by afa3aec45d

This issue was referenced by afa3aec45d95c225c0388615ad5d0549769df1fe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59734
No description provided.