Fix T59734: cyclic dependency with drivers on PoseBone.bbone_*.

Allow more flexible use of drivers on B-Bone properties by
connecting the dependencies to the actual operation node that
uses the values, instead of the whole component.